# HatGame

./: .gitignore  LICENSE  README.md  flaskServer.py  wordListA.txt
html/: index.html
python/: createGame.py  createGameAndWords.py  flaskServer.py  flaskTest.py  gameSession.py  utils.txt
rust_playground/: Cargo.toml
rust_playground/src/: main.rs
static/: default.css  dialog.js  game-list.js  game-portal.css  game.css  game.js  game_list.js~  header.html  new-game.css  new-game.js  static.css  stream-test.js
templates/: base.html  game-list.html  game-portal.html  game.html  game_list.html  game_list.html~  head.html  header.html  homepage.html  index.html  new-game.html  stream-test.html
