[package]
name = "rust_playground"
version = "0.1.0"
authors = ["Peter Lofgren <plofgren@cs.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["fs", "stream", "sync", "time", "macros"] }
warp = "0.3"
serde = "1.0" # Maybe not needed
serde_json = "1.0" # Maybe not needed
serde_urlencoded = "0.7" # Maybe not needed
serde_derive = "1.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
